[tool.poetry]
name = "nft-sales-bot"
version = "0.1.0"
description = ""
authors = ["pecio222 <pecio222@gmail.com>"]
readme = "README.md"
packages = [{include = "nft_sales_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
httpx = "^0.24.1"
discord-webhook = "^1.1.0"
cairosvg = "^2.7.0"
requests-oauthlib = "^1.3.1"
tweepy = {extras = ["async"], version = "^4.14.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
